# DocumentCompare

./: .gitignore  DocumentCompare.bat  DocumentCompare.sln  README.md  pyproject.toml  setup.py
samples/: SampleUsage.cs  __init__.py  compare_preserve_formatting.py  create_move_test_docs.py  create_table_test_docs.py  create_test_docs.py  document_compare.py  gui.py  pdf_support.py  test_comparison.py
src/DocumentCompare.Core/: DocumentCompare.Core.csproj  DocumentComparer.cs
src/DocumentCompare.Core/Comparison/: DiffEngine.cs  DiffResult.cs
src/DocumentCompare.Core/Interfaces/: IDocumentComparer.cs  IDocumentGenerator.cs  IDocumentParser.cs
src/DocumentCompare.Core/Models/: Block.cs  Document.cs  Numbering.cs  ParagraphStyle.cs  Run.cs  RunFormatting.cs  Section.cs
src/DocumentCompare.Pdf/: DocumentCompare.Pdf.csproj
src/DocumentCompare.Word/: DocumentCompare.Word.csproj  WordDocumentComparer.cs  WordGenerator.cs  WordParser.cs
tests/DocumentCompare.Core.Tests/: DiffEngineTests.cs  DocumentCompare.Core.Tests.csproj  DocumentModelTests.cs
tests/DocumentCompare.Word.Tests/: DocumentCompare.Word.Tests.csproj  WordComparisonTests.cs
